# server/docs/swagger.json
@@ -59,7 +59,7 @@
                 "tags": [
                     "chats"
                 ],
-                "summary": "Get chat by ID",
+                "summary": "Get chat",
                 "parameters": [
                     {
                         "type": "string",
@@ -163,6 +163,48 @@
                 }
             }
         },
+        "/chats/{id}/preview": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chats"
+                ],
+                "summary": "Get chat preview",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Chat ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Chat data",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ChatPreview"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/users": {
             "put": {
                 "security": [
@@ -179,7 +221,7 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Update user by ID",
+                "summary": "Update user",
                 "parameters": [
                     {
                         "description": "User data",
@@ -298,7 +340,7 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Get user by ID",
+                "summary": "Get user",
                 "parameters": [
                     {
                         "type": "string",
@@ -346,6 +388,26 @@
                     "items": {
                         "$ref": "#/definitions/domain.User"
                     }
+                }
+            }
+        },
+        "domain.ChatPreview": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "telegram_id": {
+                    "type": "integer"
+                },
+                "users_amount": {
+                    "type": "integer"
                 }
             }
         },
