# server/pkg/gateways/rest/chat/get_chat_preview.go
@@ -4,30 +4,30 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/shampsdev/tglinked/server/pkg/gateways/rest/ginerr"
 	"github.com/shampsdev/tglinked/server/pkg/gateways/rest/middlewares"
 	"github.com/shampsdev/tglinked/server/pkg/usecase"
 )
 
-// GetChatByID godoc
-// @Summary Get chat by ID
+// GetChatPreview godoc
+// @Summary Get chat preview
 // @Tags chats
 // @Accept json
 // @Produce json
 // @Schemes http https
 // @Param id path string true "Chat ID"
-// @Success 200 {object} domain.Chat "Chat data"
+// @Success 200 {object} domain.ChatPreview "Chat data"
 // @Failure 400 "Bad Request"
 // @Failure 500 "Internal Server Error"
 // @Security ApiKeyAuth
-// @Router /chats/{id} [get]
-func GetChatByID(chatCase *usecase.Chat) gin.HandlerFunc {
+// @Router /chats/{id}/preview [get]
+func GetChatPreview(chatCase *usecase.Chat) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		user := middlewares.MustGetUser(c)
 		chatID := c.Param("id")
 
-		chat, err := chatCase.GetChat(usecase.NewContext(c, user), chatID)
-		if err != nil {
-			c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		chat, err := chatCase.GetChatPreview(usecase.NewContext(c, user), chatID)
+		if ginerr.AbortIfErr(c, err, http.StatusBadRequest, "failed to get chat preview") {
 			return
 		}
 
